[tool.poetry]
name = "pypkgs_yaz"
version = "0.1.0"
description = "My first python package!"
authors = ["salehyaz <yazan.saleh@alum.utoronto.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
